--- a/gulp/css/style.scss
+++ b/gulp/css/style.scss
@@ -1,8 +1,11 @@
+$translateWidth: 100px;
+$rotateDeg: 10deg;
+
 body{
   background: #fff;
   width: (800 + 600) px;
 }
 
 .test {
-  transform: translate(100px) rotate(10deg);
+  transform: translate($translateWidth) rotate($rotateDeg);
 }
